Add full API for boards and cards